--- a/Views/Boleto/Details.cshtml
+++ b/Views/Boleto/Details.cshtml
@@ -11,6 +11,18 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.data_de_vencimento)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.data_de_vencimento)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.cod_de_barra)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.cod_de_barra)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateTime)
         </dt>
         <dd class = "col-sm-10">
