--- a/Views/Boleto/Create.cshtml
+++ b/Views/Boleto/Create.cshtml
@@ -13,6 +13,16 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="data_de_vencimento" class="control-label"></label>
+                <input asp-for="data_de_vencimento" class="form-control" />
+                <span asp-validation-for="data_de_vencimento" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="cod_de_barra" class="control-label"></label>
+                <input asp-for="cod_de_barra" class="form-control" />
+                <span asp-validation-for="cod_de_barra" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="DateTime" class="control-label"></label>
                 <input asp-for="DateTime" class="form-control" />
                 <span asp-validation-for="DateTime" class="text-danger"></span>
